# spaces

./: .gitignore  Cargo.toml  README.md  spin.toml
api/blog/src/blog/: api.rs  domain.rs
api/timeline/: Cargo.toml
api/timeline/src/: config.rs  lib.rs
api/timeline/src/blog/: service.rs
frontend/: package-lock.json  package.json
htmx/clicked/: Cargo.toml
htmx/clicked/src/: lib.rs
htmx/gohome/: Cargo.toml
htmx/gohome/src/: lib.rs
modules/: spin_static_fs.wasm
src/: config.rs  lib.rs
src/blog/: api.rs  domain.rs  mod.rs  service.rs
src/db/: create_articles.sql
web/: package-lock.json  package.json
web/public/: global.css
web/src/: App.svelte  Category.svelte  Checklist.svelte  Clock.svelte  Item.svelte  Login.svelte  Todo.svelte  Todolist.svelte  main.ts  util.js
